--- a/angular/src/less/form.less
+++ b/angular/src/less/form.less
@@ -49,3 +49,7 @@ input[type=number] {
 body .form-control {
   border: 1px solid #b8b8b8;
 }
+
+body .checkbox .control-label {
+  padding-top: 0px;
+}
