--- a/angular/src/app/property/details.tpl.html
+++ b/angular/src/app/property/details.tpl.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row" style="min-height: 210px;">
             <div class="col-sm-12 text-center box-bottom">
-                <h1>{{property.address}}</h1>
-                <h2>{{property.city}}, {{property.state}} {{property.zip}}</h2>
+                <h1>{{property.address.street}}</h1>
+                <h2>{{property.address.city}}, {{property.address.state}} {{property.address.zip}}</h2>
             </div>
         </div>
     </div>
