--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -1,9 +1,22 @@
-<form method="post" class="form-horizontal vertical-buffer-xl">
+<form method="post" class="form-horizontal" ng-controller="OwnerPropertyCtrl">
 
-    <a href="#/owners/add-property/2" class="next pull-right" style="padding-left: 20px; vertical-align: sub;position: relative;top: -30px;left: -4px;">Next</a>
-    <button type="button" class="btn btn-rented pull-right" style="margin-right: 10px" ng-click="save()">Save</button>
+    <a href="#/owners/add-property/2" class="next pull-right" style="padding-left: 20px; vertical-align: sub;position: relative;top: -30px;left: -4px;" ng-show="add">Next</a>
+    <button type="button" class="btn btn-rented pull-right" style="margin-right: 10px" ng-click="save()" ng-show="add">Save</button>
 
-    <h1 style="margin-top: 0px;">Property 1</h1>
+    <h1 style="margin-top: 0px;" ng-show="add">Property {{profile.properties.length+1}}</h1>
+
+    <div class="content-header header-shadow" ng-hide="add">
+        <div class="container">
+            <div class="row" style="min-height: 210px;">
+                <div class="col-sm-12 text-center box-bottom">
+                    <button type="button" class="btn btn-rented pull-right" style="margin-right: 10px; position: absolute; right: 20px;" ng-click="save()">Save</button>
+                    <h1>{{property.address.street}}</h1>
+                    <h2>{{property.address.city}}, {{property.address.state}} {{property.address.zip}}</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <fieldset class="fieldset-required">
         <legend>Address</legend>
@@ -197,13 +210,11 @@
            <div class="alert alert-{{shoutUpload.type}} text-center vertical-buffer" ng-show="shoutUpload">{{shoutUpload.content}}</div>
 
            <div class="col-sm-3 top-buffer" ng-repeat="picture in property.pictures">
-               <img ng-src="{{picture}}" class="img-responsive">
+               <img ng-src="{{picture}}" class="img-responsive" ng-click="removePicture(picture)">
            </div>
 
        </div>
 
     </fieldset>
-
-    {{property | json}}
 
 </form>
