--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -22,17 +22,17 @@
         <div class="col-sm-12 property-list">
 
             <div class="row property-row" ng-repeat="(id, property) in properties | loadProperty">
-                <img pl-holder="holder.js/553x368/auto/textmode:exact/^cccccc:^969696" class="col-md-7 col-xs-12 img-responsive">
+                <img ng-src="{{property.pictures[0]}}" class="col-md-7 col-xs-12 img-responsive">
                 <div class="col-md-5 col-xs-12">
                     <h3>
-                        <a href="#/property/{{property.$id}}">{{property.address}}</a>
+                        <a href="#/property/{{property.$id}}">{{property.address.street}}</a>
                     </h3><!-- /.property-row-title -->
 
                     <h4>
-                        <a href="#/property/{{property.$id}}">{{property.city}}, {{property.state}} {{property.zip}}</a>
+                        <a href="#/property/{{property.$id}}">{{property.address.city}}, {{property.address.state}} {{property.address.zip}}</a>
                     </h4><!-- /.property-row-subtitle -->
 
-                    <div class="property-row-price"><strong>Suggested Rent</strong> ${{property.rent}}</div>
+                    <div class="property-row-price"><strong>Suggested Rent</strong> ${{property.targetRent}}</div>
 
                     <div class="property-row-features" style="margin-bottom: 20px;">{{property.beds}} Beds, {{property.baths}} Baths</div>
 
