--- a/angular/src/less/form.less
+++ b/angular/src/less/form.less
@@ -53,3 +53,9 @@ body .form-control {
 body .checkbox .control-label {
   padding-top: 0px;
 }
+
+div.buttons {
+  position: absolute;
+  right: 20px;
+  margin-top: 10px;
+}
