--- a/angular/src/app/owner/add-property.tpl.html
+++ b/angular/src/app/owner/add-property.tpl.html
@@ -4,6 +4,6 @@
 <div class="alert alert-{{shout.type}} text-center" ng-show="shout.content">{{shout.content}}</div>
 
 <div class="container">
-   <div class="vertical-buffer-xl" ng-include="step">
+   <div class="vertical-buffer-xl" ng-include="step" style="position: relative;">
    </div>
 </div>
