--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -249,6 +249,7 @@ a.next {
        position: relative;
        bottom: -8px;
        left: 5px;
+       line-height: 0.1;
     }
 }
 
@@ -278,5 +279,6 @@ a.prev {
        position: relative;
        bottom: -8px;
        right: 5px;
+       line-height: 0.1;
     }
 }
