--- a/angular/src/app/owner/partials/verify-profile.tpl.html
+++ b/angular/src/app/owner/partials/verify-profile.tpl.html
@@ -1,16 +1,7 @@
-<div class="vertical-buffer-xl">
-
-    <div class="row text-center" style="position: relative; margin-bottom: 80px;">
-        <div class="col-sm-10">
-            <h1 style="margin-top: -10px">Owner/Manager Verification</h1>
-        </div>
-        <div class="col-sm-2" style="position: absolute; right: 0px;">
-           <a href="#/owners/add-property/3" class="next">Next</a>
-        </div>
-
-        
+    <div class="buttons"> 
+       <a href="#/owners/add-property/3" class="next">Next</a>
     </div>
 
-    <p class="text-lg" style="margin-bottom: 70px;">Thank you for registering. We have verified your profile and you are ready to qualify tenants!</p>
-    
-</div>
+    <h1>Owner/Manager Verification</h1>
+
+    <p class="text-lg" class="bottom-buffer-xl">Thank you for registering. We have verified your profile and you are ready to qualify tenants!</p>
