--- a/angular/src/less/buttons.less
+++ b/angular/src/less/buttons.less
@@ -41,3 +41,13 @@
 
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
+
+.button-container {
+ position: relative;
+}
+
+div.buttons {
+  position: absolute;
+  right: 0px;
+  margin-top: 10px;
+}
