--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -147,6 +147,14 @@ a[ng-click], a[go-back] {
   margin-bottom: 120px;
 }
 
+.right-buffer {
+  margin-right: 20px;
+}
+
+.left-buffer {
+  margin-left: 20px;
+}
+
 .nopad-left {
   padding-left: 0px;
 }
