--- a/angular/src/app/tenant/profile.tpl.html
+++ b/angular/src/app/tenant/profile.tpl.html
@@ -1,108 +1,276 @@
 <div class="container">
-    <form method="post" class="form-horizontal">
+    <form method="post" class="form-horizontal bottom-buffer-xl button-container">
 
-        <button type="button" class="btn btn-rented pull-right" ng-click="save()">Save</button>
+        <div class="buttons">
+           <button type="button" class="btn btn-rented right-buffer" ng-click="save()">Save</button>
+           <a ng-click="page=1" class="prev active">1</a>
+           <a ng-click="page=2" class="next">2</a>
+        </div>
 
-        <h1>My Profile</h1>
+        <h1>My Profile {{page==2 ? 'Cont' : ''}}</h1>
 
-        <div class="row">
-
-            <fieldset class="fieldset-required">
-               <legend>Contact</legend>
-               
+        <div ng-show="page==1">
+        <fieldset class="fieldset-required">
+           <legend>Contact</legend>
+           
+           <div class="row">
                <div class="col-sm-2">
                     <span class="fileinput-button">
-                       <img class="media-object img-circle" alt="Upload your picture..." style="display: inline; margin-bottom: 10px;" ng-src="{{profile.picture || 'assets/img/avatar.png'}}">
-                       <input type="file" ng-file-select="onFileSelect($files)" accept="image/*">
+                       <img class="media-object img-circle img-responsive" alt="Upload your picture..." style="display: inline; margin-bottom: 10px;" ng-src="{{profile.picture || 'assets/img/avatar.png'}}">
+                       <input type="file" ng-file-select="pictureSelected($files)" accept="image/*">
                     </span>
                </div>
 
-               <div class="col-sm-5">
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">First</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob">
+               <div class="col-sm-10">
+                   <div class="row">
+                       <div class="col-sm-6">
+                           <div class="form-group">
+                               <label class="col-sm-4 control-label">First</label>
+                               <div class="col-sm-8">
+                                  <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob">
+                               </div>
+                           </div>
+                       </div>
+                       <div class="col-sm-6">
+                           <div class="form-group">
+                               <label class="col-sm-4 control-label">Last</label>
+                               <div class="col-sm-8">
+                                  <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="Johnson">
+                               </div>
+                           </div>
                        </div>
                    </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Phone</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="tel" ng-model="profile.phone" placeholder="000.000.000">
+                   <div class="row">
+                       <div class="col-sm-6">
+                           <div class="form-group">
+                               <label class="col-sm-4 control-label">E-Mail</label>
+                               <div class="col-sm-8">
+                                  <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="bob@gmail.com">
+                               </div>
+                           </div>
+                       </div>
+                       <div class="col-sm-6">
+                           <div class="form-group">
+                               <label class="col-sm-4 control-label">Phone</label>
+                               <div class="col-sm-8">
+                                  <input class="form-control input-lg" type="tel" ng-model="profile.phone" placeholder="000.000.000">
+                               </div>
+                           </div>
                        </div>
                    </div>
                </div>
+           </div>
 
-               <div class="col-sm-5">
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Last</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="Johnson">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">E-Mail</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="bob@gmail.com">
-                       </div>
-                   </div>
-               </div>
-            </fieldset>
+        </fieldset>
 
-        </div>
+        <fieldset class="fieldset-required">
+            <legend>Address</legend>
 
-        <div class="row">
-
-            <fieldset class="fieldset-required">
-               <legend>Address</legend>
+            <div class="row">
 
                <div class="col-sm-6">
                    <div class="form-group">
                        <label class="col-sm-4 control-label">Street</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.street">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">City</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.city">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Zip</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.zip">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.street">
                        </div>
                    </div>
                </div>
-
                <div class="col-sm-6">
                    <div class="form-group">
                        <label class="col-sm-4 control-label">Apt. number</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.aptNumber">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">State</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.state">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.aptNumber">
                        </div>
                    </div>
                </div>
 
-            </fieldset>
+            </div>
 
-        </div>
+            <div class="row">
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">City</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.city">
+                       </div>
+                   </div>
+               </div>
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">State</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.state">
+                       </div>
+                   </div>
+               </div>
+            </div>
 
-        <div class="row">
+            <div class="row">
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Zip</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.zip">
+                       </div>
+                   </div>
+               </div>
+            </div>
 
-            <fieldset class="fieldset-required">
-               <legend>Credit Info</legend>
+        </fieldset>
 
-               <p class="text-lg">Lorem Ipsum</p>
-            </fieldset>
+        <fieldset class="fieldset-required">
+            <legend>Prior Address</legend>
 
+            <div class="row">
+
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Street</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.street">
+                       </div>
+                   </div>
+               </div>
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Apt. number</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.aptNumber">
+                       </div>
+                   </div>
+               </div>
+
+            </div>
+
+            <div class="row">
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">City</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.city">
+                       </div>
+                   </div>
+               </div>
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">State</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.state">
+                       </div>
+                   </div>
+               </div>
+            </div>
+
+            <div class="row">
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Zip</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.zip">
+                       </div>
+                   </div>
+               </div>
+            </div>
+
+        </fieldset>
+
+        <fieldset class="fieldset-required">
+           <legend>Move-In Information</legend>
+
+           <div class="row">
+               <div class="col-sm-12">
+                   <div class="row">
+                       <div class="col-sm-4">
+                           <div class="form-group">
+                               <label class="col-sm-6 control-label"># of Occupants</label>
+                               <div class="col-sm-6">
+                                  <input class="form-control input-lg" type="number" ng-model="profile.movein.occupantsNo">
+                               </div>
+                           </div>
+                       </div>
+                       <div class="col-sm-5">
+                           <div class="form-group">
+                               <label class="col-sm-6 control-label">Annual Income</label>
+                               <div class="col-sm-6">
+                                  <input class="form-control input-lg" type="number" ng-model="profile.movein.annualIncome">
+                               </div>
+                           </div>
+                       </div>
+                       <div class="col-sm-3">
+                           <div class="form-group">
+                               <label class="col-sm-6 control-label">Pets</label>
+                               <div class="col-sm-6">
+                                  <input class="form-control input-lg" type="text" ng-model="profile.pets">
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="row">
+                       <div class="col-sm-12">
+                           <div class="form-group">
+                               <label class="col-sm-2 control-label">Reason for Moving</label>
+                               <div class="col-sm-10">
+                                  <textarea ng-model="profile.movein.reason" class="form-control input-lg"></textarea>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+
+        </fieldset>
+
+        <fieldset class="fieldset-required">
+           <legend>Financial Information</legend>
+
+           <div class="row">
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-7 control-label">Household Income Level</label>
+                       <div class="col-sm-5">
+                          <input class="form-control input-lg" type="text" ng-model="profile.financial.incomeLevel">
+                       </div>
+                   </div>
+               </div>
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-6 control-label">Other Income</label>
+                       <div class="col-sm-6">
+                          <input class="form-control input-lg" type="text" ng-model="profile.financial.otherIncome">
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <div class="row">
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-7 control-label">Upload Proof of Income</label>
+                       <div class="col-sm-5">
+                          <span class="btn btn-rented fileinput-button">
+                            Upload <span class="glyphicon glyphicon-cloud-upload"></span>
+                            <input id="fileupload" type="file" name="proofOfIncome" multiple accept="application/pdf" ng-file-select="proofSelected($files,profile)">
+                          </span>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-sm-6">
+                   <strong>ex. Bank Statement, paystub, w2</strong>
+               </div>
+           </div>
+           <div class="row">
+               <div class="col-sm-12">
+                   <div class="alert alert-{{shoutUpload.type}} text-center vertical-buffer" ng-show="shoutUpload">{{shoutUpload.content}}</div>
+
+                   <ol class="control-label">
+                       <li ng-repeat="file in profile.financial.proofsOfIncome">
+                          <a href="{{file.data}}" download="{{file.name}}">{{file.name}}</a>   ({{(file.size/1024).toFixed(0)}} kb)
+                       </li>
+                   </ol>
+               </div>
+           </div>
+
+        </fieldset>
         </div>
 
     </form>
