--- a/angular/src/less/navbar-arrow.less
+++ b/angular/src/less/navbar-arrow.less
@@ -11,7 +11,7 @@
     }
 
     a {
-      width: 318px;
+      width: 302px;
       padding-left: 123px;
       padding-top: 13px;
       padding-bottom: 13px;
@@ -56,6 +56,10 @@
         border-left-color: @navbar-arrow-border-color;
         border-width: 74px;
         margin-top: -74px;
+      }
+
+      @media (min-width: @screen-lg-min) {
+        width: 318px;
       }
    }
 
