--- a/angular/src/app/owner/add-property.tpl.html
+++ b/angular/src/app/owner/add-property.tpl.html
@@ -1,4 +1,4 @@
-<div class="brand-stripe" ng-include="'owner/partials/add-property-navbar.tpl.html'">
+<div class="brand-stripe" ng-include="'owner/partials/add-property-navbar.tpl.html'" style="overflow-y: hidden;">
 </div>
 
 <div class="alert alert-{{shout.type}} text-center" ng-show="shout.content">{{shout.content}}</div>
