--- a/angular/src/app/tenant/on-boarding.tpl.html
+++ b/angular/src/app/tenant/on-boarding.tpl.html
@@ -1,4 +1,4 @@
-<div class="brand-stripe" ng-include="'tenant/partials/on-boarding-navbar.tpl.html'">
+<div class="brand-stripe" ng-include="'tenant/partials/on-boarding-navbar.tpl.html'" style="overflow-y: hidden;">
 </div>
 
 <div class="container" ng-include="step">
