--- a/angular/src/app/tenant/partials/credit-check.tpl.html
+++ b/angular/src/app/tenant/partials/credit-check.tpl.html
@@ -1,17 +1,10 @@
-<div class="vertical-buffer-xl">
-
-    <div class="row text-center" style="position: relative; margin-bottom: 80px;">
-        <div class="col-sm-10">
-            <h1 style="margin-top: -10px">Credit Check</h1>
-        </div>
-        <div class="col-sm-2" style="position: absolute; right: 0px;">
-           <a href="#/tenants/on-boarding/ready-to-apply" class="next">Next</a>
-        </div>
-
-        
+    <div class="buttons">
+        <a href="#/tenants/on-boarding/ready-to-apply" class="next">Next</a>
     </div>
 
-    <p class="text-lg" style="margin-bottom: 70px;">Thank you for completing your profile, Rented Team will contact you shortly. 
+    <h1>Credit Check</h1>
+
+    <p class="text-lg bottom-buffer-xl" style="margin-bottom: 70px;">Thank you for completing your profile, Rented Team will contact you shortly. 
     <br>Your offer will still be submitted.</p>
     
 </div>
