--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -31,7 +31,7 @@
                <div class="form-group">
                    <label class="col-sm-4 control-label">Street</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.address.street">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.street" autofocus>
                    </div>
                </div>
            </div>
