--- a/angular/src/app/tenant/partials/profile-page-1.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-1.tpl.html
@@ -15,7 +15,7 @@
                    <div class="form-group">
                        <label class="col-sm-4 control-label">First</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob">
+                          <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob" autofocus>
                        </div>
                    </div>
                </div>
