--- a/angular/src/app/tenant/partials/profile-page-2.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-2.tpl.html
@@ -13,7 +13,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Phone</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="tel" ng-model="profile.currentOwner.phone">
+                  <input class="form-control input-lg" type="tel" ng-model="profile.currentOwner.phone" autofocus>
                </div>
            </div>
        </div>
