better bid form

--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -4,21 +4,22 @@
     <div class="form-group">
         <label class="col-sm-4 control-label">Price</label>
         <div class="col-sm-8">
-            <input class="form-control input-lg" type="number" ng-model="bid.price" required autofocus>
+            <input class="form-control input-lg" type="number" ng-model="bid.price" min="{{property.lowestRent}}" required autofocus>
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-sm-4 control-label">Move-In Date</label>
         <div class="col-sm-8">
-            <input type="date" class="form-control input-lg" ng-model="bid.movein" required>
+            <input type="date" class="form-control input-lg" ng-model="bid.movein" min="{{property.availableDate}}" required>
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-sm-4 control-label">Lease Terms</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control input-lg" ng-model="bid.terms" required>
+            <select class="form-control input-lg" ng-model="bid.leaseTerm" ng-options="term.months as term.desc for term in terms" ng-disabled="terms.length==1" required>
+            </select>
         </div>
     </div>
 
