--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -1,17 +1,17 @@
 <h5>Make An Offer</h5>
 
-<form method="post" class="form-horizontal" ng-submit="makeAnOffer(bid,property)" ng-controller="TenantBidCtrl">
+<form method="post" class="form-horizontal" ng-submit="makeAnOffer(bid,property)" ng-controller="TenantBidCtrl" ng-show="gotProfile">
     <div class="form-group">
         <label class="col-sm-4 control-label">Price</label>
         <div class="col-sm-8">
-            <input class="form-control input-lg" type="number" ng-model="bid.price" min="{{property.lowestRent}}" ng-disabled="!property.dynamicPricing" required autofocus>
+            <input class="form-control input-lg" type="number" ng-model="bid.rentAmount" min="{{property.lowestRent}}" ng-disabled="!property.dynamicPricing" required autofocus>
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-sm-4 control-label">Move-In Date</label>
         <div class="col-sm-8">
-            <input type="date" class="form-control input-lg" ng-model="bid.movein" min="{{property.availableDate}}" required>
+            <input type="date" class="form-control input-lg" ng-model="bid.moveInDate" min="{{property.availableDate}}" required>
         </div>
     </div>
 
