--- a/angular/src/app/owner/property-status.tpl.html
+++ b/angular/src/app/owner/property-status.tpl.html
@@ -4,17 +4,17 @@
         <h1>100 6B Bird Creek Dr.</h1>
 
         <div class="row bottom-buffer">
-            <div class="col-sm-5">
-               <img pl-holder="holder.js/144x97/auto/textmode:exact/^cccccc:^969696" class="img-responsive">
+            <div class="col-sm-2">
+               <img ng-src="{{property.pictures[0]}}" class="img-responsive">
             </div>
-            <div class="col-sm-7">
+            <div class="col-sm-offset-3 col-sm-7">
                 <div class="row">
                     <div class="col-sm-offset-6 col-sm-3 counter">
-                        <p class="counter-val">500,000</p>
+                        <p class="counter-val">{{property.bestOffer.rentAmount | rentCurrency }}</p>
                         <p class="counter-desc">Highest Offer</p>
                     </div>
                     <div class="col-sm-3 counter">
-                        <p class="counter-val">Aug 15</p>
+                        <p class="counter-val">{{property.bestOffer.moveInDate | date: 'MMM dd'}}</p>
                         <p class="counter-desc">Move In Date</p>
                     </div>
                 </div>
@@ -27,15 +27,15 @@
 <div class="container">
 
     <div class="row bottom-buffer-lg">
-        <div class="col-sm-4 top-buffer" ng-repeat="offer in [1,2,3,4,5,6]">
+        <div class="col-sm-4 top-buffer" ng-repeat="bid in property.bids | loadBid">
             <div class="row">
               <div class="col-sm-3">
-                 <img pl-holder="holder.js/60x60" class="img-circle">
+                 <img ng-src="{{bid.user.picture || 'assets/img/avatar.png'}}" class="img-circle img-responsive">
               </div>
               <div class="col-sm-9">
-                <h4 style="font-size: 24px; font-weight: bold;">Kevin Lee</h4>
-                <p><strong>Job Title:</strong> $345.000</p>
-                <p><strong>Phone Number:</strong> 800</p>
+                <h4 style="font-size: 24px; font-weight: bold;">{{bid.user.firstName}} {{bid.user.lastName}}</h4>
+                <p><strong>Rent:</strong> {{bid.rentAmount | rentCurrency}}</p>
+                <p><strong>Phone:</strong> {{bid.user.phone}}</p>
                 <p><strong>Pets:</strong> Ok</p>
               </div>
             </div>
