--- a/angular/src/app/property/details.tpl.html
+++ b/angular/src/app/property/details.tpl.html
@@ -24,10 +24,10 @@
 
 <div class="container property">
     <div class="row" style="margin-bottom: 50px;">
-        <div class="col-sm-6">
+        <div class="col-sm-12">
             <h5>Description</h5>
 
-            <p ng-bind-html="property.description"></p>
+            <pre ng-bind-html="property.description"></pre>
         </div>
     </div>
     <!-- /.row -->
