--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -10,20 +10,20 @@
         </div>
 
         <div class="row vertical-buffer">
-            <div class="col-sm-5">
+            <div class="col-sm-4">
                 <div class="row">
-                  <div class="col-sm-3 nopad-right" style="padding-left: 30px;">
-                     <img pl-holder="holder.js/60x60" class="img-circle">
+                  <div class="col-sm-4 nopad-right" style="padding-left: 30px;">
+                     <img ng-src="{{profile.picture || 'assets/img/avatar.png'}}" class="img-circle img-responsive">
                   </div>
-                  <div class="col-sm-8 nopad-left">
+                  <div class="col-sm-8">
                     <h4 style="font-size: 24px; font-weight: bold;">{{profile.firstName}} {{profile.lastName}}</h4>
                     <p>I have 2 condos for rent.</p>
                   </div>
                 </div>
             </div>
-            <div class="col-sm-7">
+            <div class="col-sm-offset-1 col-sm-7">
                 <div class="row">
-                    <div class="col-sm-offset-3 col-sm-3 counter active">
+                    <div class="col-sm-offset-3 col-sm-3 counter">
                         <p class="counter-val">15</p>
                         <p class="counter-desc">Offers</p>
                     </div>
