--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -193,6 +193,16 @@
          </div>
     </fieldset>
 
+    <fieldset>
+       <legend>Description</legend>
+
+       <div class="row">
+          <div class="col-sm-12">
+             <textarea class="form-control" ng-model="property.description" rows="10"></textarea>
+          </div>
+       </div>
+    </fieldset>
+
 
     <fieldset>
        <legend>Upload Image</legend>
