--- a/angular/src/app/tenant/properties.tpl.html
+++ b/angular/src/app/tenant/properties.tpl.html
@@ -14,12 +14,10 @@
     <h1>My Watchlist</h1>
 
     <div class="row properties bottom-buffer-xl">
-        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in [1,2,3,4]">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <a href="http://www.craigslist.org/about/sites#US" class="btn btn-rented" target="_blank">See More On Craigslist</a>
+        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in watchlist | loadProperty">
+            <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
+            <!--a href="http://www.craigslist.org/about/sites#US" class="btn btn-rented" target="_blank">See More On Craigslist</a-->
+            <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
         </div>
     </div>
 
