--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -290,3 +290,9 @@ a.prev {
        line-height: 0.1;
     }
 }
+
+body pre {
+   font-size: @font-size-base;
+   font-family: @font-family-sans-serif;
+   border: 0px;
+}
