--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -17,7 +17,7 @@
                   </div>
                   <div class="col-sm-8">
                     <h4 style="font-size: 24px; font-weight: bold;">{{profile.firstName}} {{profile.lastName}}</h4>
-                    <p>I have 2 condos for rent.</p>
+                    <p>I have {{profile.properties.length}} condos for rent.</p>
                   </div>
                 </div>
             </div>
@@ -59,29 +59,6 @@
 
     <div class="row" style="margin-top: 40px">
         <div class="col-sm-9">
-           <!--h5>Watching</h5>
-           <div class="row watching">
-               <div class="col-sm-1">
-                  <span class="badge" style="background-color: #89d4cd;">98<sub>%</sub></span> 
-               </div>
-               <div class="col-sm-9">
-                  <p>1245 Molino Street, San Francisco CA 94102</p> 
-               </div>
-               <div class="col-sm-2">
-                  <button type="button" class="btn btn-rented">See More</button>
-               </div>
-           </div>
-           <div class="row watching">
-               <div class="col-sm-1">
-                  <span class="badge" style="background-color: #ff503f;">33<sub>%</sub></span> 
-               </div>
-               <div class="col-sm-9">
-                  <p>467 Haight Street, San Francisco CA 94102</p> 
-               </div>
-               <div class="col-sm-2">
-                  <button type="button" class="btn btn-rented">See More</button>
-               </div>
-           </div-->
            <h5 class="top-buffer">Savings</h5>
            <div class="row savings">
             <div class="col-sm-12">
