--- a/angular/src/app/tenant/dashboard.tpl.html
+++ b/angular/src/app/tenant/dashboard.tpl.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-sm-offset-1 col-sm-7">
                 <div class="row">
-                    <div class="col-sm-3 counter active">
+                    <div class="col-sm-3 counter">
                         <p class="counter-val">15</p>
                         <p class="counter-desc">Offers</p>
                     </div>
@@ -51,12 +51,9 @@
     <h5 class="top-buffer">Recent Offers</h5>
 
     <div class="row properties">
-        <div class="col-sm-3" ng-repeat="property in [1,2,3,4]">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <a href="#/owners/properties/xyz/status" class="btn btn-rented">See More</a>
+        <div class="col-sm-3" ng-repeat="property in properties | loadProperty">
+            <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
+            <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
         </div>
     </div>
 
