--- a/angular/src/app/owner/property-status.tpl.html
+++ b/angular/src/app/owner/property-status.tpl.html
@@ -41,7 +41,7 @@
             </div>
             <div class="row top-buffer-sm">
                 <button class="btn btn-rented">Accept</button>
-                <button class="btn btn-rented">See More</button>
+                <button class="btn btn-rented" ng-click="bidDetails(bid)">See More</button>
             </div>
             <div class="row top-buffer-sm">
                 <button class="btn btn-rented">Counter Offer</button>
