--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -296,3 +296,13 @@ body pre {
    font-family: @font-family-sans-serif;
    border: 0px;
 }
+
+body .modal-dialog {
+   margin-top: 64px;
+
+   .modal-content {
+      border: 0px;
+      box-shadow: none;
+      -webkit-box-shadow: none;
+   }
+}
