--- a/angular/src/less/form.less
+++ b/angular/src/less/form.less
@@ -22,6 +22,23 @@ fieldset {
            }
        }
     }
+
+    &.readonly {
+
+       .control-label {
+           font-weight: bold;
+           
+           &::after {
+              content: ":";
+           }
+       }
+
+       .field-text {
+           font-size: 24px;
+           padding-left: 10px;
+       }
+
+    }
 }
 
 input[type=number] {
