--- a/angular/src/app/owner/partials/tenant-profile.tpl.html
+++ b/angular/src/app/owner/partials/tenant-profile.tpl.html
@@ -26,7 +26,7 @@
         </fieldset>
     </div>
     <div class="col-sm-6">
-        <fieldset>
+        <fieldset class="readonly">
           <legend>Address</legend>
 
            <div class="form-group">
@@ -79,7 +79,7 @@
         </fieldset>
     </div>
     <div class="col-sm-6">
-        <fieldset>
+        <fieldset class="readonly">
           <legend>Financial Information</legend>
 
            <div class="form-group">
